# thesisrobotics

./: LICENSE  README.md
docs/: README.md
drivers/jaco2_driver/: CMakeLists.txt  package.xml
drivers/jaco2_driver/include/jaco2_driver/: jaco2_driver.hpp
drivers/jaco2_driver/launch/: jaco2_left.launch  jaco2_right.launch  kinova_robot.launch
drivers/jaco2_driver/nodes/jaco2_driver/: fingers_action_client.py  foo.py  joints_action_client.py  joints_demo.py  pose_action_client.py  test.py
drivers/jaco2_driver/src/: jaco2_driver.cpp
drivers/jaco2_driver/urdf/: j2n6s300.urdf.xacro
drivers/kin_driver/: CMakeLists.txt  package.xml
drivers/kin_driver/include/kin_driver/: kin_driver.hpp
drivers/kin_driver/src/: kin_driver.cpp
drivers/kinect_driver/: CMakeLists.txt
drivers/kinect_driver/src/: kinect_main.cpp
kinect_driver/: CMakeLists.txt  package.xml
kinect_driver/src/: kinect_main.cpp
kinova_miguel/: CMakeLists.txt  package.xml  setup.py
kinova_miguel/launch/: kinova_robot.launch
kinova_miguel/nodes/kinova_miguel/: fingers_action_client.py  joints_action_client.py  pose_action_client.py
ral/jaco2_ral/: CMakeLists.txt  package.xml  setup.py
ral/jaco2_ral/include/jaco2_ral/: jaco2_ral_joints.hpp
ral/jaco2_ral/launch/: jaco2_ral_left.launch  jaco2_ral_right.launch
ral/jaco2_ral/nodes/jaco2_ral/: fingers_demo.py  joints_demo.py  pose_demo.py
ral/jaco2_ral/src/: jaco2_ral_joints.cpp
ral/kin_ral/: CMakeLists.txt  package.xml
ral/kin_ral/src/: kin_ral_main.cpp
ral/viz_ral/: CMakeLists.txt  package.xml
ral/viz_ral/include/: viz_ral_main.hpp
ral/viz_ral/src/: viz_ral_main.cpp
robot/: README.md
thesisrobotics/: README.md
usr_msgs/: CMakeLists.txt  package.xml
usr_msgs/msg/: OpenPosePosition.msg
util/: CMakeLists.txt  package.xml  setup.py
util/include/util/: util.hpp
util/nodes/util/: util.py
util/src/: util.cpp
